Edge:
* Allow for rank_expr option being passed through to Riddle.

1.4.11 - January 2nd 2011
* Handle no results for total_pages and total_entries with defaults of 0.
* No longer shuffle Sphinx addresses by default.
* Fix coalescing of non-char values in PostgreSQL (Matthew Barnett).
* Default database user for Sphinx configuration is now ENV['USER'], not root.
* Alias offset to offset_value for Kaminari.
* Sphinx 2.1.0-dev support.

1.4.10 - November 4th 2011
* Updating Riddle references for impending 1.5.0 release of Riddle.
* Handle out-of-date indexed_models references.
* Fixing STI model handling during context index loading (Kenn Ejima).

1.4.9 - October 10th 2011
* Fixing invalid gemspec.

1.4.8 - October 10th 2011
* Adding smart default (id) for primary key column name.
* Making error message when daemon fails to start a little more helpful (Tony Pitale).
* Adding ThinkingSphinx::Search#last_page? for Kaminari (Pete Deffendol).
* If ENV['NODETACH'] is set when calling ts:start, pass that flag through to Riddle to start Sphinx in the foreground (Aaron Gibralter).
* Catch and report all errors when models are loaded (Martin Gordon).
* Bringing in builder gem's BlankSlate for our Builder - better at keeping global Rake methods out of the way.
* Use PostgreSQL's array_agg function if it exists, instead of array_accum (PG v8.4 or newer).
* Shuffle multiple Sphinx addresses by default, but allow that to be turned off (Ngan Pham).
* Fix string attributes when using Sphinx 2.0.1 and bin_path.

1.4.7 - August 28th 2011
* Don't search for objects when updating attributes on every save - if the object isn't there, then the error will be caught anyway.
* Extra flexibility for association attribute references (Andrew White).
* Setting up test suite for Travis, and fixing tests across many rubies.
* Removing test for filtering on wordcount attribute - seems Sphinx doesn't like that.
* If many indices are searched on, only use the first for excerpts.